# mpc_local_planner

./: .bash_aliases  INSTALL.md  README.md
.devcontainer/: Dockerfile  docker-compose.yaml  drop_in_container.sh
mpc_local_costmap/: CMakeLists.txt  package.xml
mpc_local_costmap/config/: mpc_local_costmap.yaml
mpc_local_costmap/launch/: mpc_local_costmap.launch.py
mpc_local_planner/: package.xml  setup.py
mpc_local_planner/config/: amcl_param.yaml  burger.yaml  mpc_params.yaml
mpc_local_planner/launch/: bringup.launch.py  mpc_local_planner.launch.py  navigation_launch.py  navigation_stack.launch.py
mpc_local_planner/map/: my_map.pgm  my_map.yaml
mpc_local_planner/mpc_local_planner/: controller.py  goal_to_plan.py  model.py  mpc_local_planner.py  mpc_local_planner_node.py  trajectory_planner.py  utils.py
mpc_local_planner/mpc_local_planner/core/: costmap.py  state.py
mpc_local_planner/mpc_local_planner/costs/: obstacle_penalty.py
mpc_local_planner/mpc_local_planner/opt/: optimizer.py
mpc_local_planner/mpc_local_planner/test/: multiple_shooting_nmpc_obstacle_avoidance_refrence_tracking.py  multiple_shooting_nmpc_obstacle_avoidance_refrence_tracking_casadi.py  multiple_shooting_nmpc_tutorial.py  test_mpc copy.py  test_mpc.py  test_pypose.py
mpc_local_planner/rviz/: rviz.rviz
notebook/: mpc_notebook.ipynb  utils.py
