<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mpc_local_planner</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="your@adress.com">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>gazebo_ros2</build_depend>
  <exec_depend>gazebo_ros2</exec_depend>

  <build_depend>mpc_local_costmap</build_depend>
  <exec_depend>mpc_local_costmap</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
